--- a/01.CSS/base/print.css
+++ b/01.CSS/base/print.css
@@ -1,5 +1,5 @@
-.bbody{
-    font-family: initial;
-    font-size: 10px;
-    background-color: rgb(11, 17, 184);
+.bodY{
+    font-family: cursive;
+    font-size: 25px;
+    background-color: #bb3434;
 }
