--- a/01.CSS/base/screen.css
+++ b/01.CSS/base/screen.css
@@ -1,6 +1,5 @@
-
-.bbody{
-font-family: Verdana;
-font-size:45px;
-background-color: chartreuse;
+.bodY{
+    font-family: sans-serif;
+    font-size: 14px;
+    background-color: #eee;
 }
